# hardbot

./: Cargo.toml  README.md  build.nix  defaults.toml  shell.nix
nix/: sources.json
src/: bot.rs  config.rs  main.rs  runtime.rs
