[package]
name = "hardbot"
version = "0.1.0"
authors = ["steve"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_chat_wrapper = "0.2.0"
anyhow = "1.0.36"
stringlit = "2.0.0"
maplit = "1.0.2"
serde = "1.0.118"
toml = "0.5.8"
